--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 
 @layer base {
+  body {
+    font-family: var(--font-geist-sans);
+  }
+
   :root {
     --background: 224, 5%, 95%;
     --foreground: 240 10% 3.9%;
@@ -36,10 +40,10 @@
   }
 
   .dark {
-    --background: 20 14.3% 4.1%;
+    --background: 0 0 7%;
     --foreground: 0 0% 95%;
 
-    --card: 24 9.8% 10%;
+    --card: 0 0 1%;
     --card-foreground: 0 0% 95%;
 
     --popover: 0 0% 9%;
